--- a/index.html
+++ b/index.html
@@ -27,12 +27,7 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-    Theme Name: TheEvent
-    Theme URL: https://bootstrapmade.com/theevent-conference-event-bootstrap-template/
-    Author: BootstrapMade.com
-    License: https://bootstrapmade.com/license/
-  ======================================================= -->
+
 </head>
 
 <body>
@@ -69,7 +64,7 @@
       <p class="mb-4 pb-0">Where leaders are born!</p>
       <a href="#about" class="about-btn scrollto">About The Event</a>
       <br>
-      <a href="#about" class="about-btn scrollto">Live Event Webapp</a>
+      <a href="" class="about-btn scrollto">Live Event Webapp</a>
     </div>
   </section>
 
